# advent_of_code

./: Cargo.toml
aoc2022/: Cargo.toml
aoc2022/input/day4/: sample.txt
aoc2022/src/: day1.rs  day10.rs  day11.rs  day12.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day8.rs  day9.rs  lib.rs
