[package]
name = "aoc2022"
version = "0.0.1"
edition = "2021"

[lib]

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"

[[bin]]
name = 'day4'

[[bin]]
name = "day5"

[[bin]]
name = "day6"

[dependencies]
anyhow = "1"
futures = "0.3.13"
futures-concurrency = "7"
itertools = "0.10"
once_cell = "1.16.0"
rayon = "1"
regex = "1"
structopt = "0.3"
tokio = { version = "1", features = [ "full" ] }
